--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "serve": "NODE_ENV=development nodemon -w pages/api/server.js pages/api/server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "axios": "^1.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.2",
     "next": "13.1.1",
+    "nodemon": "^2.0.20",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "sass": "^1.57.1"
   }
 }
