--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8090
 NEXT_PUBLIC_SERVER_URL=http://localhost:8090
-MONGO_URI=mongodb+srv://scarlett:scarlett@scarlett.2rbdbjo.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://scarlett:Ln4j6fIiHSRkJlaR@cluster0.bagbyfg.mongodb.net/?retryWrites=true&w=majority
